--- a/CSS/global.css
+++ b/CSS/global.css
@@ -128,7 +128,9 @@ main {
     flex: 1;
     margin-top: 30px;
     padding: 10px;
-    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 main h2 {
