--- a/CSS/global.css
+++ b/CSS/global.css
@@ -69,6 +69,7 @@ nav {
     background-color: var(--secondary-color-navbar);
     font-family: arial;
     font-size: 14px;
+    z-index: 10;
 }
 
 nav ul {
@@ -126,8 +127,8 @@ nav ul ul ul li {
 /* Main content styling */
 main {
     flex: 1;
-    margin-top: 30px;
-    padding: 10px;
+    /* margin-top: 30px; */
+    /* padding: 10px; */
     display: flex;
     justify-content: center;
     text-align: center;
